# calculator

./: .gitignore  CD74HC4067.h  CMakeLists.txt  LICENSE  README.md  calculator (copy).c  calculator.c  fs.h  interface.h  io.h  mdesc.c  suspend.h  test  test.c  test.cpp  tusb_config.h  usb_descriptors.c
595/: CMakeLists.txt  rp2040_shift_register.c  rp2040_shift_register.h
74HC595/: 74HC595.c  74HC595.h  CMakeLists.txt  LICENSE  shift_reg.pio  sr_common.h
SSD1306/: CMakeLists.txt  LICENSE  font.c  font.h  sieve.h  sieve.xbm  ssd1306.c  ssd1306.h
ShiftRegister74HC595-Pico/: CMakeLists.txt  README.md  ShiftRegister74HC595.c  ShiftRegister74HC595.h  sr_common.h
cell/: CMakeLists.txt  automata.c  automata.h  midi.c  midi.h  midi_uart.c  midi_uart.h  scale.c  scale.h  scales.h  sequencer.c  sequencer.h  utility.c  utility.h
encoder/: CMakeLists.txt  encoder.c  encoder.h
hardware/: calc.fzz  calc_guts.fzz  model.blend  model.blend1  test.pam
littlefs/: CMakeLists.txt  fio.h  lfs.h
pico-keypad/: CMakeLists.txt  keypad.c  keypad.h
pico-ss-oled/: CMakeLists.txt  grotesque_font.h  ss_oled.c
pico-ss-oled/include/: ss_oled.h
pico-ssd1306/: CMakeLists.txt  font.h  ssd1306.c  ssd1306.h
quadrature-decoder/: main.cpp  quadrature_decoder.c  quadrature_decoder.h
